gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    protocol: HTTPS
    hostname: "*.becutewith.me"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: becutewith-me
        kind: Secret
        namespace: ingress
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    hostname: "becutewith.me"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: becutewith-me
        kind: Secret
        namespace: ingress
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    hostname: "rotierenderfis.ch"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: rotierenderfis-ch
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    hostname: "status.wolfyja.de"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: status-wolfyja-de
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
